src/test/fail/brace_outside_block.lly
#[
SyntaxError: '}' outside of a block.
Where: File "test/fail/brace_outside_block.lly" at line 6
]#

}
